package ru.itmo.movies.model;

public enum MpaaRating {
    PG,
    R,
    NC_17
}
